[gd_scene load_steps=9 format=3 uid="uid://b1q57iuoqo7ru"]

[ext_resource type="Script" path="res://scripts/track_color.gd" id="1_20gnx"]
[ext_resource type="Theme" uid="uid://cfni7mm2mqusg" path="res://assets/main_interface.tres" id="1_kpe42"]
[ext_resource type="Texture2D" uid="uid://bytkrlsrpicjr" path="res://assets/sprites/note_effect_texture.png" id="2_fjert"]
[ext_resource type="Texture2D" uid="uid://dd3ddrigclglg" path="res://assets/sprites/note00.png" id="2_h8355"]
[ext_resource type="Texture2D" uid="uid://d0npwtk8ndhgc" path="res://assets/sprites/note_effect_visibility.png" id="3_a1vf2"]

[sub_resource type="Animation" id="Animation_hvmtr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(-2),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_kdb3w"]
resource_name = "start"
length = 0.250008
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(0, 32), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1t4dh"]
_data = {
"RESET": SubResource("Animation_hvmtr"),
"start": SubResource("Animation_kdb3w")
}

[node name="TrackColor" type="VBoxContainer"]
process_mode = 3
modulate = Color(1, 1, 1, 0)
offset_right = 916.0
offset_bottom = 96.0
size_flags_horizontal = 10
theme = ExtResource("1_kpe42")
theme_override_constants/separation = 14
script = ExtResource("1_20gnx")

[node name="Node2D" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Node2D"]
custom_minimum_size = Vector2(0, 64)
offset_left = -342.0
offset_top = -11.0
offset_right = 1164.0
offset_bottom = 111.0
color = Color(0.933333, 0.890196, 1, 1)

[node name="Container" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="Container"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
text = "Track "
text_overrun_behavior = 3

[node name="GradientStart" type="Sprite2D" parent="Container"]
modulate = Color(1, 0, 0.133333, 1)
position = Vector2(158, 31.5)
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_a1vf2")

[node name="ColorPickerButton" type="ColorPickerButton" parent="Container"]
layout_mode = 2
text = "hehehe"
edit_alpha = false

[node name="SpinBox" type="SpinBox" parent="Container"]
layout_mode = 2
min_value = 0.25
max_value = 2.0
step = 0.01
value = 0.25
suffix = "x"

[node name="NoteTextureButton" type="Button" parent="Container"]
layout_mode = 2
theme_override_font_sizes/font_size = 21
text = "Note Image"

[node name="NoteEffectButton" type="Button" parent="Container"]
layout_mode = 2
theme_override_font_sizes/font_size = 21
text = "Note on Image"

[node name="FileDialog" type="FileDialog" parent="Container"]
title = "Open a File"
position = Vector2i(360, 203)
size = Vector2i(1200, 675)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.png")

[node name="FileDialog2" type="FileDialog" parent="Container"]
title = "Open a File"
position = Vector2i(360, 203)
size = Vector2i(1200, 675)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.png")

[node name="NoteEffectPreview" type="TextureRect" parent="Container"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("2_fjert")
expand_mode = 1
stretch_mode = 5

[node name="NoteEffectPreview2" type="TextureRect" parent="Container/NoteEffectPreview"]
self_modulate = Color(1.3, 1.3, 1.3, 1)
show_behind_parent = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
offset_right = 64.0
offset_bottom = 64.0
size_flags_horizontal = 4
texture = ExtResource("3_a1vf2")
expand_mode = 1
stretch_mode = 5

[node name="CheckBox" type="CheckBox" parent="Container"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Staccato"
alignment = 1

[node name="ColorCheckBox" type="CheckBox" parent="Container"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "No color"
alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="LeftMarginSlider" type="HSlider" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
value = 11.0
scrollable = false

[node name="TextureRect" type="NinePatchRect" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
texture = ExtResource("2_h8355")
patch_margin_left = 11
patch_margin_right = 11
axis_stretch_horizontal = 2

[node name="RightMarginSlider" type="HSlider" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
value = 11.0
scrollable = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1t4dh")
}

[connection signal="color_changed" from="Container/ColorPickerButton" to="." method="_on_color_picker_button_color_changed"]
[connection signal="gui_input" from="Container/ColorPickerButton" to="." method="_on_color_picker_button_gui_input"]
[connection signal="value_changed" from="Container/SpinBox" to="." method="_on_spin_box_value_changed"]
[connection signal="gui_input" from="Container/NoteTextureButton" to="." method="_on_note_texture_button_gui_input"]
[connection signal="mouse_entered" from="Container/NoteTextureButton" to="." method="_on_note_texture_button_mouse_entered"]
[connection signal="mouse_exited" from="Container/NoteTextureButton" to="." method="_on_note_texture_button_mouse_exited"]
[connection signal="gui_input" from="Container/NoteEffectButton" to="." method="_on_note_effect_button_gui_input"]
[connection signal="mouse_entered" from="Container/NoteEffectButton" to="." method="_on_note_effect_button_mouse_entered"]
[connection signal="mouse_exited" from="Container/NoteEffectButton" to="." method="_on_note_effect_button_mouse_exited"]
[connection signal="pressed" from="Container/NoteEffectButton" to="." method="_on_note_effect_button_pressed"]
[connection signal="file_selected" from="Container/FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="file_selected" from="Container/FileDialog2" to="." method="_on_file_dialog_2_file_selected"]
[connection signal="toggled" from="Container/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="toggled" from="Container/ColorCheckBox" to="." method="_on_color_check_box_toggled"]
[connection signal="value_changed" from="HBoxContainer2/LeftMarginSlider" to="." method="_on_left_margin_slider_value_changed"]
[connection signal="value_changed" from="HBoxContainer2/RightMarginSlider" to="." method="_on_right_margin_slider_value_changed"]
